<resources>
    <string name="app_name">OutWatch</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="empty_field_error">This field cannot be blank</string>
    <string name="rename">rename</string>
    <string name="csv">csv</string>
    <string name="dialog_new_sensor_title">Configure Sensors</string>
    <string name="invalid_mum_sensors">invalid number of sensors</string>
    <string name="name_title">Name</string>
    <string name="id_title">Id</string>
    <string name="map_location_title">Location</string>
    <string name="status_title">Active</string>
    <string name="type_title">Type</string>
    <string name="time_title">Time</string>
    <string name="yes">yes</string>
    <string name="no">no</string>
    <string name="content_delete_extra_sensor">The System has more sensors than configured, do you want to delete extra
        sensors ?
    </string>
    <string name="remove_extra_sensors">Remove extra sensors</string>
    <string name="csv_date_title"><![CDATA[Date&Time]]></string>
    <string name="csv_name_title">Sensor Name</string>
    <string name="csv_id_title">Id</string>
    <string name="csv_alarm_type_title">Alarm Type</string>
    <string name="csv_latitude_title">latitude</string>
    <string name="csv_longitude_title">longitude</string>
    <string name="camera_title">Cameras</string>
    <string name="map_title">Map</string>
    <string name="config_title">Settings</string>
    <string name="alarm_log_title">Verified Alarms</string>
    <string name="not_located">Not Located</string>
    <string name="located">Located</string>
    <string name="date_title">Date</string>
    <string name="date_title1">Date:</string>
    <string name="save">Save</string>
    <string name="define_sensor_amount">Define sensor amount</string>
    <string name="choose_alarm_sound">Choose alarm sound</string>
    <string name="vibration_when_alarm">Vibration when alarm</string>
    <string name="alarm_flickering_time">Alarm flickering time</string>
    <string name="default_str">Default</string>


    <string-array name="state_types">
        <item>car</item>
        <item>intruder</item>
        <item>not in use</item>
        <item>sensor disconnected</item>
        <item>system ok</item>
        <item>low battery</item>
        <item>dual tech alarm</item>
    </string-array>
    <string name="load_settings_export_settings">Load settings / export settings</string>
    <string name="map_view">Map view</string>
    <string name="language">Language</string>
    <string name="satellite">satellite</string>
    <string name="map">map</string>
    <string name="sensors_save_successfully">The sensors were successfully saved</string>
    <string name="time_flickering_save_successfully">Time flickering was successfully saved</string>
    <string name="english">English</string>
    <string name="no_selected_sound">no selected sound</string>
    <string name="channel_name">my_channel_01_name</string>
    <string name="channel_description">my_channel_01_description</string>
    <string name="share">Share</string>
    <string name="enter_code">enter activation code</string>
    <string name="wrong_activate_code">wrong activate code</string>
    <string name="sign_in">sign in</string>
    <string name="activate">Activate</string>
    <string name="error">Error</string>
    <string name="general_desc">description</string>
    <string name="email_subject">My Code for SG-Patrol App</string>
    <string name="camera_system_title">Cameras and systems</string>
    <string name="system_camera_configuration">System / Camera Settings</string>
    <string name="system_camera_name">System Name:</string>
    <string name="tel_num_title">Phone Number:</string>
    <string name="camera_type_title">Camera Model:</string>
    <string name="mail_address_title">Email Address:</string>
    <string name="password_title">Password:</string>
    <string name="password">Password</string>
    <string name="incoming_email_server_title">Incoming Email server:</string>
    <string name="incoming_email_server_port_title">Incoming Email Port:</string>
    <string name="use_ssl_title">Using SSL:</string>
    <string name="date_last_visit_title">Last visit date:</string>
    <string name="description">description</string>
    <string name="cancel">Cancel</string>
    <string name="time_title1">Time:</string>
    <string name="name_title1">Name:</string>
    <string name="grid_view">grid view</string>
    <string name="list_view">list view</string>
    <string name="alarm_display">alarm display</string>
    <string name="systems_filter">System</string>
    <string name="date_time">Date and time</string>
    <string name="filter_by">Filter by:</string>
    <string name="apply">apply</string>
    <string name="from">from</string>
    <string name="to">to</string>
    <string name="ok">OK</string>
    <string name="date_older">End date may not be earlier than start date</string>
    <string name="validation_error">validation error</string>
    <string name="verification_successfully">The verification was successful</string>
    <string name="no_photo">no photo</string>
    <string name="select_all">Select all</string>
    <string name="select">Select</string>
    <string name="do_you_realy_want_delete_selected_alarm">Do you realy want to delete selected alarms?</string>
    <string name="do_you_realy_want_clear_data">All of this application data will be deleted permanently. This includes all pictures, settings, and user information.</string>
    <string name="no_selected_alarms">No selected alarm</string>
    <string name="selected_alarms">selected alarm</string>
    <string name="reset">reset</string>
    <string name="get_snapshot">Get snapshot</string>
    <string name="delete_all_images">Delete all images</string>
    <string name="get_battery_status">Get battery status</string>
    <string name="get_parameters">Get parameters</string>
    <string name="arm_camera">Arm camera</string>
    <string name="disarm_camera">Disarm camera</string>
    <string name="set_email_recipient">Set email recipients</string>
    <string name="set_mms_recipients">Set mms recipients</string>
    <string name="missing_phone_number">Missing phone number</string>
    <string name="emails_title">Add emails</string>
    <string name="send_command">Send command</string>
    <string name="email">Email</string>
    <string name="email1">Email 1</string>
    <string name="email2">Email 2</string>
    <string name="email3">Email 3</string>
    <string name="email4">Email 4</string>
    <string name="phone_num_title">Add phone numbers</string>
    <string name="phone_num_1">Phone number 1</string>
    <string name="phone_num_2">Phone number 2</string>
    <string name="phone_num_3">Phone number 3</string>
    <string name="phone_num_4">Phone number 4</string>
    <string name="you_need_at_least_one_email">You need at least one email</string>
    <string name="you_need_at_least_one_phone_num">You need at least one phone number</string>
    <string name="invalid_email">Invalid email</string>
    <string name="set_admin_title">Set admin</string>
    <string name="incorrect_phone_number_or_password">Incorrect phone number or password</string>
    <string name="phone_num">Phone number:</string>
    <string name="enable_notification_in_the_background">enable notification in the background</string>
    <string name="do_you_want_to_open_setting_battery">Do you want to open battery settings?</string>
    <string name="not_allow_background_activity">Background activity not enabled</string>
    <string name="user_title">Username:</string>
    <string name="no_user_found">No user found</string>
    <string name="no_active_user_found">No active user found</string>
    <string name="edit_user_name">Edit user information</string>
    <string name="add_phone_numbers_title">Add phone numbers</string>
    <string name="send">Send</string>
    <string name="error_load_image">Error loading image</string>
    <string name="error_no_data">Error without information</string>
    <string name="save_file_success">File save was successful</string>
    <string name="save_file_failed">Failed to save file</string>
    <string name="verification_failed">The verification has failed</string>
    <string name="share_title">Send video from SensoGuard</string>
    <string name="transmain__abb_upgrade_host_disable_page_notice" translatable="false">Sorry, only the app admin can buy credits or subscribe</string>
    <string name="notification_disabled">Please enable notification</string>
    <string name="clear_data">Clear Data</string>

    <string-array name="camera_model">
        <item>MG-983G-30M</item>
        <item>MG-984G-36M</item>
        <item>MG-984G-30M</item>
        <item>MG-983G-36M</item>
        <item>BG-668</item>
        <item>ATC</item>
        <item>HIKVISION</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="web_page">Web</string>
    <string name="all_alarms">All Alarms</string>
    <string name="desc">desc</string>

    <!--    <string-array name="camera_type">-->
    <!--        <item>MG-983G</item>-->
    <!--        <item>MG-984G</item>-->
    <!--        <item>BG-668</item>-->
    <!--        <item>ATC</item>-->
    <!--        <item>HIKVISION</item>-->
    <!--    </string-array>-->


</resources>
