<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"

        android:background="@drawable/bg_sign_in"
        >

    <ProgressBar
            android:id="@+id/pbValidation"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="17.3dp"
            android:indeterminateTint="@color/colorPrimaryDark"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="@+id/tvError"
            app:layout_constraintStart_toEndOf="@+id/tvError"
            app:layout_constraintTop_toTopOf="@+id/tvError" />

    <ImageView
        android:id="@+id/ivClose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="null"
        android:src="@drawable/btn_close"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        />


    <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/editTextDialogUserInput"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:background="@drawable/edit_text_border"
            android:ems="12"
            android:imeOptions="actionDone"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:textAlignment="center"
            android:textDirection="ltr"
            android:textSize="13sp"
            android:hint="@string/email"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@+id/frPassword"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.440"
            android:layout_marginStart="36dp"
            android:layout_marginEnd="36dp"
        />

    <FrameLayout
        android:id="@+id/frPassword"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginTop="5dp"
        android:layout_marginStart="36dp"
        android:layout_marginEnd="36dp"
        app:layout_constraintTop_toBottomOf="@+id/editTextDialogUserInput"

    >

    <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/editTextDialogPasswordInput"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/edit_text_border"
            android:ems="12"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:maxLines="1"
            android:textAlignment="center"
            android:hint="@string/password"
            android:textDirection="ltr"
            android:textSize="13sp"/>

        <ImageView
            android:id="@+id/ivToggleHidePassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_view_password"
            android:layout_gravity="start"
            />

    </FrameLayout>

    <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnSubmit"
            android:layout_width="0dp"
            android:layout_height="31.7dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="48dp"
            android:background="@color/green1"
            android:lineSpacingExtra="-9.9sp"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:text="@string/sign_in"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="18.7sp"
            app:layout_constraintWidth_percent="0.6"
            app:layout_constraintVertical_bias="0.440"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/frPassword"/>
            />


    <TextView
            android:id="@+id/tvError"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:lineSpacingExtra="-9.9sp"
            android:text="@string/phone_num_3"
            android:textColor="@color/red"
            android:textSize="14.7sp"
            android:visibility="invisible"
            app:layout_constraintStart_toStartOf="@+id/frPassword"
            app:layout_constraintTop_toBottomOf="@+id/btnSubmit" />


</androidx.constraintlayout.widget.ConstraintLayout>