<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent" xmlns:app="http://schemas.android.com/apk/res-auto"
        tools:context=".activities.MainActivity">


    <!--logo-->
    <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/mainMenuContainer1"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@color/white"
            app:layout_constraintHeight_default="percent"
            app:layout_constraintHeight_percent="0.127"
            app:layout_constraintTop_toTopOf="parent"

            >

       <androidx.appcompat.widget.AppCompatImageView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               app:srcCompat="@drawable/logo_big"
               android:contentDescription="@+id/appwidget_label"
               app:layout_constraintStart_toStartOf="parent"
               app:layout_constraintEnd_toEndOf="parent"
               app:layout_constraintTop_toTopOf="parent"
               app:layout_constraintBottom_toBottomOf="parent"
               app:layout_constraintVertical_bias="0.553"

       />


    </androidx.constraintlayout.widget.ConstraintLayout> <!--container 1-->

    <!--sub logo-->
    <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/mainMenuContainer2"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@color/gray2"
            app:layout_constraintHeight_default="percent"
            app:layout_constraintHeight_percent="0.127"
            app:layout_constraintTop_toBottomOf="@+id/mainMenuContainer1"

            >

        <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@+id/appwidget_label"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.553"
                app:srcCompat="@drawable/sub_logo"

                />


    </androidx.constraintlayout.widget.ConstraintLayout> <!--container 2-->

    <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/mainMenuContainer3"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@drawable/bg_main"
            app:layout_constraintHeight_default="percent"
            app:layout_constraintHeight_percent="0.75"
            app:layout_constraintTop_toBottomOf="@+id/mainMenuContainer2">

        <!--sensor table-->
        <!--        <androidx.constraintlayout.widget.ConstraintLayout-->
        <!--                android:id="@+id/clickConsCamerasTable"-->
        <!--                android:layout_width="0dp"-->
        <!--                android:layout_height="0dp"-->
        <!--                android:background="@drawable/selector_main_menu"-->
        <!--                app:layout_constraintStart_toStartOf="parent"-->
        <!--                app:layout_constraintEnd_toEndOf="parent"-->
        <!--                app:layout_constraintTop_toTopOf="parent"-->
        <!--                app:layout_constraintBottom_toBottomOf="parent"-->
        <!--                android:layoutDirection="ltr"-->
        <!--                android:visibility="visible"-->
        <!--                app:layout_constraintHeight_default="percent"-->
        <!--                app:layout_constraintHeight_percent="0.322"-->
        <!--                app:layout_constraintHorizontal_bias="0.107"-->
        <!--                app:layout_constraintVertical_bias="0.074"-->
        <!--                android:clickable="true"-->
        <!--                android:focusable="true"-->
        <!--                app:layout_constraintWidth_default="percent"-->
        <!--                app:layout_constraintWidth_percent="0.433">-->

        <!--            <androidx.appcompat.widget.AppCompatImageView-->
        <!--                    android:id="@+id/ivSensorTable"-->
        <!--                    android:layout_width="wrap_content"-->
        <!--                    android:layout_height="wrap_content"-->
        <!--                    app:layout_constraintVertical_bias="0.248"-->
        <!--                    app:layout_constraintStart_toStartOf="parent"-->
        <!--                    app:layout_constraintEnd_toEndOf="parent"-->
        <!--                    app:layout_constraintTop_toTopOf="parent"-->
        <!--                    app:layout_constraintBottom_toBottomOf="parent"-->
        <!--                    app:srcCompat="@drawable/ic_cameras_main" />-->

        <!--            <TextView-->
        <!--                    android:layout_width="wrap_content"-->
        <!--                    android:layout_height="wrap_content"-->
        <!--                    android:gravity="center_horizontal"-->
        <!--                    android:text="@string/camera_system_title"-->
        <!--                    android:textColor="@color/white"-->
        <!--                    app:layout_constraintStart_toStartOf="parent"-->
        <!--                    app:layout_constraintEnd_toEndOf="parent"-->
        <!--                    app:layout_constraintTop_toBottomOf="@+id/ivSensorTable"-->
        <!--                    app:layout_constraintBottom_toBottomOf="parent"-->
        <!--                    android:textSize="18.3sp"-->
        <!--                    app:layout_constraintVertical_bias="0.355" />-->


        <!--        </androidx.constraintlayout.widget.ConstraintLayout>-->

        <!--alarm log-->
        <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/clickVerifiedAlarmLog"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:background="@drawable/selector_main_menu"

                android:layoutDirection="ltr"
                android:visibility="visible"

                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintHeight_default="percent"


                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHeight_percent="0.250"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"

                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.074"


                app:layout_constraintWidth_default="percent"
                app:layout_constraintWidth_percent="0.433">

            <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/ivAlarmLog"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.248"
                    app:srcCompat="@drawable/ic_alarms_log" />

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="@string/alarm_log_title"
                    android:textColor="@color/white"
                    android:textSize="18.3sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/ivAlarmLog"
                    app:layout_constraintVertical_bias="0.355" />



        </androidx.constraintlayout.widget.ConstraintLayout>


        <!--configuration-->
        <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/clickConsConfiguration"
                android:clickable="true"
                android:focusable="true"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:background="@drawable/selector_main_menu"
                android:layoutDirection="ltr"
                android:visibility="visible"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHeight_default="percent"
                app:layout_constraintHeight_percent="0.250"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintVertical_bias="0.79"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintWidth_default="percent"
                app:layout_constraintWidth_percent="0.433"

                >

            <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/ivConfiguration"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.299"
                    app:srcCompat="@drawable/ic_configurations_main" />

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="@string/config_title"
                    android:textColor="@color/white"
                    android:textSize="18.3sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/ivConfiguration"
                    app:layout_constraintVertical_bias="0.535" />



        </androidx.constraintlayout.widget.ConstraintLayout>



        <!--all alarms-->
                <androidx.constraintlayout.widget.ConstraintLayout
                        android:id="@+id/clickConsAllAlarms"
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:background="@drawable/selector_main_menu"
                        android:layoutDirection="ltr"
                        android:visibility="visible"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintHeight_default="percent"
                        app:layout_constraintHeight_percent="0.250"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/clickVerifiedAlarmLog"
                        app:layout_constraintVertical_bias="0.04"
                        app:layout_constraintWidth_default="percent"
                        app:layout_constraintWidth_percent="0.433"
        >

                    <androidx.appcompat.widget.AppCompatImageView
                            android:id="@+id/ivAllAlarms"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintVertical_bias="0.308"
                            app:srcCompat="@drawable/ic_map_main"

                            />

                    <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center_horizontal"
                            android:text="@string/all_alarms"
                            android:textColor="@color/white"
                            android:textSize="18.3sp"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/ivAllAlarms"
                            app:layout_constraintVertical_bias="0.511" />

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:id="@+id/consDisableNotification"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/frame_button_layout"
                        android:backgroundTint="@color/mdtp_transparent_black"
                        android:visibility="visible">

                        <TextView
                            android:id="@+id/host_disable_notice"
                            style="@style/profile_lbl1_black"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="@string/notification_disabled"
                            android:textAllCaps="true"
                            android:textColor="@color/mx_White"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <ToggleButton
                            android:id="@+id/togChangeBackgroundRestrict"
                            android:layout_width="44dp"
                            android:layout_height="25dp"
                            android:layout_marginTop="16dp"
                            android:background="@color/transparent"
                            android:button="@drawable/toggle_selector_active"
                            android:text="ToggleButton"
                            android:textOff=""
                            android:textOn=""
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/host_disable_notice" />

                    </androidx.constraintlayout.widget.ConstraintLayout>


                </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
                android:id="@+id/tvShowVer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="32dp"
                android:text="ddd"
                android:textColor="#000000"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>